[gd_scene load_steps=40 format=3 uid="uid://x8a4or6d3v74"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_d5yr4"]
[ext_resource type="Texture2D" uid="uid://blp4j8ffpfpju" path="res://assets/sprites/balloon-boy-flying.png" id="3_kaip1"]
[ext_resource type="PackedScene" uid="uid://6jv51yftki6d" path="res://scenes/balloon.tscn" id="4_4yq73"]
[ext_resource type="Texture2D" uid="uid://booopoyin5taq" path="res://assets/sprites/balloon-boy-hit.png" id="4_qktpw"]
[ext_resource type="Texture2D" uid="uid://c7kdefgece5sw" path="res://assets/sprites/balloon-boy.png" id="4_vlacx"]
[ext_resource type="Texture2D" uid="uid://bcphq0d5bhihj" path="res://assets/sprites/balloon-boy-jump.png" id="5_a1oo6"]
[ext_resource type="Texture2D" uid="uid://ia2sofcyfknq" path="res://assets/sprites/balloon-boy-pumping.png" id="6_d4jnv"]
[ext_resource type="Texture2D" uid="uid://cnb2l4w5rsbxu" path="res://assets/sprites/balloon-boy-walk.png" id="7_3h2v2"]

[sub_resource type="AtlasTexture" id="AtlasTexture_d4b4e"]
atlas = ExtResource("3_kaip1")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nb2ap"]
atlas = ExtResource("3_kaip1")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_derxu"]
atlas = ExtResource("3_kaip1")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_o6jik"]
atlas = ExtResource("3_kaip1")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wemsl"]
atlas = ExtResource("4_qktpw")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ia6yl"]
atlas = ExtResource("4_qktpw")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_rg23p"]
atlas = ExtResource("4_vlacx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wj6jq"]
atlas = ExtResource("4_vlacx")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2dhnj"]
atlas = ExtResource("4_vlacx")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ombb"]
atlas = ExtResource("4_vlacx")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_w1mki"]
atlas = ExtResource("5_a1oo6")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_tqqv4"]
atlas = ExtResource("6_d4jnv")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ghqou"]
atlas = ExtResource("6_d4jnv")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_d47l0"]
atlas = ExtResource("6_d4jnv")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvcwd"]
atlas = ExtResource("6_d4jnv")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_hsjnm"]
atlas = ExtResource("6_d4jnv")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3qnp"]
atlas = ExtResource("6_d4jnv")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_xuf71"]
atlas = ExtResource("6_d4jnv")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_taauj"]
atlas = ExtResource("6_d4jnv")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_qf1wu"]
atlas = ExtResource("6_d4jnv")
region = Rect2(256, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vafrh"]
atlas = ExtResource("7_3h2v2")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_f7v6f"]
atlas = ExtResource("7_3h2v2")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_skr2e"]
atlas = ExtResource("7_3h2v2")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_dwngp"]
atlas = ExtResource("7_3h2v2")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_5xkok"]
atlas = ExtResource("7_3h2v2")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_surjt"]
atlas = ExtResource("7_3h2v2")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_c6p77"]
atlas = ExtResource("7_3h2v2")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yytm5"]
atlas = ExtResource("7_3h2v2")
region = Rect2(224, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_ylqtj"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_d4b4e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nb2ap")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_derxu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o6jik")
}],
"loop": true,
"name": &"fly",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wemsl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ia6yl")
}],
"loop": true,
"name": &"hit",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rg23p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wj6jq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2dhnj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ombb")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w1mki")
}],
"loop": true,
"name": &"jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tqqv4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ghqou")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d47l0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lvcwd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hsjnm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3qnp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xuf71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_taauj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qf1wu")
}],
"loop": true,
"name": &"pumping",
"speed": 14.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vafrh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f7v6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_skr2e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dwngp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5xkok")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_surjt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c6p77")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yytm5")
}],
"loop": true,
"name": &"run",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5kq3m"]
size = Vector2(17, 33.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ggj0k"]
size = Vector2(14.5, 23)

[node name="Player" type="CharacterBody2D"]
z_index = 5
collision_layer = 2
collision_mask = 513
script = ExtResource("1_d5yr4")
balloonScene = ExtResource("4_4yq73")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
scale = Vector2(0.8, 0.8)
sprite_frames = SubResource("SpriteFrames_ylqtj")
animation = &"hit"
autoplay = "idle"
frame_progress = 0.992014

[node name="WithBalloonsCollision" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -5.25)
shape = SubResource("RectangleShape2D_5kq3m")

[node name="HitTimer" type="Timer" parent="."]
wait_time = 1.578
one_shot = true

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
position = Vector2(0, 2.5)
scale = Vector2(1, 0.95)

[node name="WithoutBalloonsCollision" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
shape = SubResource("RectangleShape2D_ggj0k")
disabled = true

[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
[connection signal="screen_exited" from="VisibleOnScreenEnabler2D" to="." method="_on_visible_on_screen_enabler_2d_screen_exited"]
